cases/tests/nginx-ingress/otel_log_format/decoy/controller-extra-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-nginx-controller-extra
  namespace: ingress-nginx
  labels:
    benchmark.decoy: "true"
    benchmark.case: otel_log_format
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
data:
  log-format-upstream: '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"'
